# digital_signature

./: .gitignore  README.md  main.py  pyproject.toml  rxconfig.py
data/: private_key.json  public_key.json  transaction.json
digital_signature/: digital_signature.py
digital_signature/components/: box.py  nav.py
digital_signature/database/: connection.py
digital_signature/pages/: landing.py  recipient.py  sender.py
digital_signature/pages/recipient/: recipient.py  state.py
digital_signature/pages/sender/: sender.py  state.py
digital_signature/utils/: decrypt.py  encrypt.py  helper.py
